--- a/public/css/admin/sales-data/salesData.css
+++ b/public/css/admin/sales-data/salesData.css
@@ -40,7 +40,7 @@ html {
 }
 
 /* TABLE */
-table {
+#sale-data-main-body table {
   border-collapse: collapse;
   margin: 2em 0;
 
@@ -48,24 +48,24 @@ table {
   table-layout: fixed;
 }
 
-table caption {
+#sale-data-main-body table caption {
   font-size: 1.5em;
   margin: .5em 0 .75em;
 }
 
-table tr {
+#sale-data-main-body table tr {
   background-color: #ffffff;
   padding: .35em;
 }
 
-table th,
-table td {
+#sale-data-main-body table th,
+#sale-data-main-body table td {
 
   padding: 1em 0;
   text-align: center;
 }
 
-table th {
+#sale-data-main-body table th {
   font-size: .85em;
   letter-spacing: .1em;
   text-transform: uppercase;
@@ -74,15 +74,15 @@ table th {
 }
 
 @media screen and (max-width: 600px) {
-  table {
+  #sale-data-main-body table {
     border: 0;
   }
 
-  table caption {
+  #sale-data-main-body table caption {
     font-size: 1.3em;
   }
 
-  table thead {
+  #sale-data-main-body table thead {
     border: none;
     clip: rect(0 0 0 0);
     height: 1px;
@@ -93,20 +93,20 @@ table th {
     width: 1px;
   }
 
-  table tr {
+  #sale-data-main-body table tr {
     border-bottom: 3px solid #ddd;
     display: block;
     margin-bottom: .625em;
   }
 
-  table td {
+  #sale-data-main-body table td {
     border-bottom: 1px solid #ddd;
     display: block;
     font-size: .8em;
     text-align: right;
   }
 
-  table td::before {
+  #sale-data-main-body table td::before {
     /*
         * aria-label has no advantage, it won't be read inside a table
         content: attr(aria-label);
@@ -117,7 +117,7 @@ table th {
     text-transform: uppercase;
   }
 
-  table td:last-child {
+  #sale-data-main-body table td:last-child {
     border-bottom: 0;
   }
 }
