--- a/templates/partials/adminHeader.hbs
+++ b/templates/partials/adminHeader.hbs
@@ -27,6 +27,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
         integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     {{#> css}}
     {{/css}}
 </head>
@@ -854,6 +857,7 @@
     function openMenu() {
         $('#layout-menu').toggleClass('active');
     }
+
     $(document).ready(function () {
         // .scroll() creates an event when the user scrolls
         $(window).scroll(function () {
@@ -948,6 +952,9 @@
     $('#search-form').on('submit', (e) => {
         e.preventDefault()
     })
+
+
+
 </script>
 <script src="/js/admin/ajaxReq.js"></script>
 <script src="/js/admin/sub-admin.js"></script>
@@ -960,6 +967,14 @@
     src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
 <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css" />
+
+{{!-- date range picker --}}
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+{{!-- print js --}}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/print-js/1.6.0/print.js"
+    integrity="sha512-/fgTphwXa3lqAhN+I8gG8AvuaTErm1YxpUjbdCvwfTMyv8UZnFyId7ft5736xQ6CyQN4Nzr21lBuWWA9RTCXCw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 {{#> script}}{{/script}}
 
 </html>
